--- a/manifest.json
+++ b/manifest.json
@@ -104,30 +104,20 @@
             "splashscreen": {
                 "ios": {
                     "iphone": {
-                        "default": "", /*iPhone3启动图片选，分辨率：320x480*/
-                        "retina35": "",/*3.5英寸设备(iPhone4)启动图片，分辨率：640x960*/
-                        "retina40": "",/*4.0 英寸设备(iPhone5/iPhone5s)启动图片，分辨率：640x1136*/
-                        "retina47": "",/*4.7 英寸设备(iPhone6)启动图片，分辨率：750x1334*/
-                        "retina55": "",/*5.5 英寸设备(iPhone6 Plus)启动图片，分辨率：1242x2208*/
-                        "retina55l": ""/*5.5 英寸设备(iPhone6 Plus)横屏启动图片，分辨率：2208x1242*/
+                        "default": ""/*5.5 英寸设备(iPhone6 Plus)横屏启动图片，分辨率：2208x1242*/
                     },
                     "ipad": {
-                        "portrait": "", /*iPad竖屏启动图片，分辨率：768x1004*/
-                        "portrait-retina": "",/*iPad高分屏竖屏图片，分辨率：1536x2008*/
-                        "landscape": "", /*iPad横屏启动图片，分辨率：1024x748*/
-                        "landscape-retina": "", /*iPad高分屏横屏启动图片，分辨率：2048x1496*/
-                        "portrait7": "", /*iPad iOS7竖屏启动图片，分辨率：768x1024*/
-                        "portrait-retina7": "",/*iPad iOS7高分屏竖屏图片，分辨率：1536x2048*/
-                        "landscape7": "", /*iPad iOS7横屏启动图片，分辨率：1024x768*/
-                        "landscape-retina7": ""/*iPad iOS7高分屏横屏启动图片，分辨率：2048x1536*/
+                         /*iPad竖屏启动图片，分辨率：768x1004*/
+                        "portrait-retina": "img/Cg-4WlPNGz2Ifu3IABSCvMd_sN0AAPyzQEUaecAFILU304.png",/*iPad高分屏竖屏图片，分辨率：1536x2008*/
+                         /*iPad横屏启动图片，分辨率：1024x748*/
+                        "landscape-retina": "img/Cg-4WlPNGz2Ifu3IABSCvMd_sN0AAPyzQEUaecAFILU304.png", /*iPad高分屏横屏启动图片，分辨率：2048x1496*/
+                         /*iPad iOS7竖屏启动图片，分辨率：768x1024*/
+                        "portrait-retina7": "img/Cg-4WlPNGz2Ifu3IABSCvMd_sN0AAPyzQEUaecAFILU304.png"/*iPad iOS7高分屏横屏启动图片，分辨率：2048x1536*/
                     }
                 },
                 "android": {
                     "mdpi": "", /*普通屏启动图片，分辨率：240x282*/
-                    "ldpi": "", /*大屏启动图片，分辨率：320x442*/
-                    "hdpi": "", /*高分屏启动图片，分辨率：480x762*/
-                    "xhdpi": "", /*720P高分屏启动图片，分辨率：720x1242*/
-                    "xxhdpi": ""/*1080P高分屏启动图片，分辨率：1080x1882*/
+                    "ldpi": ""/*1080P高分屏启动图片，分辨率：1080x1882*/
                 }
             }
         },"ads":{"rp":false,"splash":false,"push":false},"adid":""
